--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "nodemailer": "^7.0.12",
     "papaparse": "^5.5.3",
     "react": "^19.2.1",
+    "react-big-calendar": "^1.19.4",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.64.0",
@@ -92,6 +93,7 @@
     "@types/nodemailer": "^7.0.5",
     "@types/papaparse": "^5.5.2",
     "@types/react": "^19.2.1",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^5.0.4",
     "add": "^2.0.6",
